[package]
name = "quantmath"
version = "0.1.0"
authors = ["Marcus Rainbow"]
license = "MIT"
description = "A library of quantitative maths and a framework for quantitative valuation and risk"

[dependencies]
statrs = "0.15.0"
ndarray = "0.15.6"
nalgebra = { version = "0.30.1" }

rand = "0.8.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
erased-serde = "0.3"
serde_tagged = "0.2.0"
lazy_static = "1.0"
void = "1"
libc = "0.2"
modcholesky = "0.1.4"
argmin = "0.7.0"
finitediff = "0.1.4"
num-traits = "0.2"
derive_more = "0.99.0"
levenberg-marquardt = "0.12.0"

[lib]
name = "quantmath"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[build-dependencies]
cc = "1.0.73"
